--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@parameter1/graphql-type-date": "^1.0.23",
     "apollo-server-express": "^3.6.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
